--- a/app/src/main/res/drawable/rounded_live.xml
+++ b/app/src/main/res/drawable/rounded_live.xml
@@ -5,7 +5,7 @@
             <solid android:color="@android:color/holo_red_dark"/>
             <stroke android:color="@android:color/holo_red_dark" android:width="2dp" />
             <!--corners allow us to make the rounded corners button-->
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_50sdp" />
         </shape>
     </item>
 </selector>
