--- a/app/src/main/res/layout/item_home_recent_event.xml
+++ b/app/src/main/res/layout/item_home_recent_event.xml
@@ -1,68 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/_7sdp"
-    android:layout_marginRight="@dimen/_7sdp"
-    android:layout_marginBottom="@dimen/_7sdp"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintEvent"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linearEventMain"
+        android:layout_width="@dimen/_250sdp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginEnd="@dimen/_7sdp"
+        android:background="@drawable/back_recent_event"
+        android:orientation="vertical"
+        android:padding="@dimen/_10sdp">
 
-        <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imgEventProfile"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_centerInParent="true"
-            android:scaleType="fitXY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="H,1:1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/dummy"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/back_black_tarns"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imgEventVideo"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvEventManagerName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:includeFontPadding="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10sdp"
+                app:fontFamily="@font/roboto_medium"
+                tools:text="Event Name" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgAccountProfile"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:src="@drawable/place_holder" />
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_150sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:elevation="0dp"
+            app:cardCornerRadius="@dimen/_20sdp"
+            app:cardElevation="0dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/imgEventProfile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/place_holder" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/back_event_date_gredient"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:padding="@dimen/_10sdp"
+                    android:backgroundTint="@color/white"
+                    android:layout_margin="@dimen/_10sdp">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvEventDateDay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:includeFontPadding="false"
+                        android:text="- - -"
+                        android:textColor="@color/colorPink88"
+                        android:textSize="@dimen/_8ssp"
+                        app:fontFamily="@font/roboto_medium" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvEventDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:includeFontPadding="false"
+                        android:text="- -"
+                        android:textColor="@color/colorPink88"
+                        android:textSize="@dimen/_11ssp"
+                        app:fontFamily="@font/roboto_medium" />
+                </LinearLayout>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvEventRequest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/_7sdp"
-            android:layout_marginBottom="@dimen/_7sdp"
-            android:src="@drawable/video_camera_white"
-            android:layout_marginEnd="@dimen/_7sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvEventManagerName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:fontFamily="@font/poppins_medium"
-        android:textSize="@dimen/_10sdp"
-        android:includeFontPadding="false"
-        android:textColor="@color/white"
-        android:text="User Name"
-        android:singleLine="true"
-        android:lines="1"
-        android:layout_marginTop="@dimen/_8sdp"/>
-</LinearLayout>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/_5sdp"
+            tools:text="REQUEST"
+            app:fontFamily="@font/roboto_bold"
+            android:textSize="@dimen/_12ssp"
+            android:textColor="@color/colorPink88"
+            android:visibility="visible"/>
+    </LinearLayout>
 </layout>
