--- a/app/src/main/res/layout/item_manage_recent_event.xml
+++ b/app/src/main/res/layout/item_manage_recent_event.xml
@@ -34,7 +34,7 @@
                 android:elevation="0dp"
                 app:cardCornerRadius="@dimen/_15sdp">
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/imgEventProfile"
+                    android:id="@+id/imageEvent"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
