--- a/app/src/main/res/layout/activity_manager_edit_event_new.xml
+++ b/app/src/main/res/layout/activity_manager_edit_event_new.xml
@@ -142,8 +142,8 @@
                                 android:id="@+id/editEventTime"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:layout_marginStart="@dimen/_8sdp"
+                                android:layout_weight="1"
                                 android:background="@color/transparent"
                                 android:editable="false"
                                 android:hint="@string/txt_time"
@@ -200,17 +200,17 @@
                         android:id="@+id/recyclerEventImages"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:clipToPadding="false"
-                        android:layout_marginTop="@dimen/_18sdp"/>
+                        android:layout_marginTop="@dimen/_18sdp"
+                        android:clipToPadding="false" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_150sdp"
                         android:layout_marginTop="@dimen/_25sdp"
                         android:clipToPadding="false"
-                        app:cardElevation="0dp"
                         android:elevation="0dp"
-                        app:cardCornerRadius="@dimen/_15sdp">
+                        app:cardCornerRadius="@dimen/_15sdp"
+                        app:cardElevation="0dp">
 
                         <FrameLayout
                             android:id="@+id/frameMap"
@@ -286,14 +286,32 @@
                 android:src="@drawable/ic_edit_event" />
         </LinearLayout>
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imgShareEvent"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:src="@drawable/btn_share_event"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgShareEvent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_weight="1"
+                android:src="@drawable/btn_share_event" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgDeleteEvent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_weight="1"
+                android:src="@drawable/ic_delete_button"
+                android:visibility="gone"/>
+
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
