--- a/app/src/main/res/layout/activity_live_video_player.xml
+++ b/app/src/main/res/layout/activity_live_video_player.xml
@@ -36,6 +36,7 @@
             android:id="@+id/tvLiveStreamCountDown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:background="@drawable/back_follow"
             android:backgroundTint="@color/colorOptionText"
             android:includeFontPadding="false"
@@ -49,8 +50,7 @@
             android:textSize="@dimen/_10ssp"
             android:visibility="visible"
             app:fontFamily="@font/poppins_medium"
-            tools:ignore="RtlCompat"
-            android:layout_marginEnd="@dimen/_10sdp"/>
+            tools:ignore="RtlCompat" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvStreamLive"
@@ -73,68 +73,43 @@
             tools:ignore="RtlCompat" />
     </LinearLayout>
 
-    <!--<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#88000000"
+        android:gravity="start"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/debug_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:textSize="10sp"
-            tools:ignore="SmallSp" />
-
-        <LinearLayout
-            android:id="@+id/controls_root"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <Button
-                android:id="@+id/retry_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/retry"
-                android:visibility="gone" />
-
-        </LinearLayout>
-
-
-
-    </LinearLayout>-->
-
-    <!-- <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:orientation="vertical"
-        android:padding="24dp"
-        android:id="@+id/video_start_control_layout"
-        android:visibility="visible">
-
-       <EditText
-            android:id="@+id/video_name_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="stream name (add live=1 if it is live e.g. test live=1)"
-            android:textAppearance="?android:textAppearanceMedium" />
-
-        <Button
-            android:id="@+id/play_live_video"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvLiveStreamUserCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="play"
-            android:text="@string/exo_controls_play_description"
-            android:textColor="@android:color/white"
-            android:textAppearance="?android:textAppearanceMedium"
-            />
-    </LinearLayout>-->
+            android:background="@drawable/back_follow"
+            android:backgroundTint="@color/colorBlack66"
+            android:drawableStart="@drawable/ic_user"
+            android:drawablePadding="@dimen/_5sdp"
+            android:gravity="center_vertical"
+            android:includeFontPadding="false"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingTop="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_3sdp"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_12ssp"
+            android:visibility="visible"
+            app:fontFamily="@font/poppins_medium"
+            tools:ignore="RtlCompat"
+            android:layout_margin="@dimen/_12sdp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerLiveUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:overScrollMode="never"
+            android:paddingStart="@dimen/_12sdp"
+            android:paddingEnd="@dimen/_7sdp"
+            android:clipToPadding="false" />
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
