--- a/app/src/main/res/layout/activity_assign_event.xml
+++ b/app/src/main/res/layout/activity_assign_event.xml
@@ -89,7 +89,7 @@
                 android:maxLines="1"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="@dimen/_11ssp"/>
+                android:textSize="@dimen/_11ssp" />
 
         </LinearLayout>
 
@@ -126,10 +126,30 @@
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:padding="@dimen/_18sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tvSendMail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/linearCountNSort" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvSendMail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_12sdp"
+            android:background="@drawable/back_go_live"
+            android:backgroundTint="@color/login_background"
+            android:fontFamily="@font/poppins_medium"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:paddingStart="@dimen/_15sdp"
+            android:paddingTop="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_15sdp"
+            android:paddingBottom="@dimen/_10sdp"
+            android:text="@string/send_email"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_14ssp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
