--- a/app/src/main/res/layout/activity_live_stream.xml
+++ b/app/src/main/res/layout/activity_live_stream.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"/>
 
     <LinearLayout
+        android:id="@+id/llLiveStreamRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
@@ -61,11 +62,12 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llLiveStreamLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvLiveStreamUserCount"
