--- a/app/src/main/res/layout-land/activity_live_stream.xml
+++ b/app/src/main/res/layout-land/activity_live_stream.xml
@@ -2,7 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -74,6 +73,7 @@
             android:id="@+id/tvLiveStreamUserCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_12sdp"
             android:background="@drawable/back_follow"
             android:backgroundTint="@color/colorBlack66"
             android:drawableStart="@drawable/ic_user"
@@ -90,20 +90,16 @@
             android:textSize="@dimen/_12ssp"
             android:visibility="visible"
             app:fontFamily="@font/poppins_medium"
-            tools:ignore="RtlCompat"
-            android:layout_margin="@dimen/_12sdp"/>
+            tools:ignore="RtlCompat" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerLiveUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clipToPadding="false"
             android:overScrollMode="never"
             android:paddingStart="@dimen/_12sdp"
-            android:paddingEnd="@dimen/_7sdp"
-            android:clipToPadding="false" />
-
+            android:paddingEnd="@dimen/_7sdp" />
     </LinearLayout>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
 </layout>
