--- a/app/src/main/res/layout/dialog_log_out.xml
+++ b/app/src/main/res/layout/dialog_log_out.xml
@@ -18,8 +18,10 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvLogoutTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:includeFontPadding="false"
                 android:text="@string/logout_msg"
                 android:textAlignment="center"
@@ -33,14 +35,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_40sdp"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginEnd="@dimen/_40sdp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvLogoutTitle"
-                android:layout_marginStart="@dimen/_40sdp"
-                android:layout_marginEnd="@dimen/_40sdp"
-                android:layout_marginTop="@dimen/_30sdp">
+                app:layout_constraintTop_toBottomOf="@id/tvLogoutTitle">
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvLogoutYes"
@@ -48,28 +50,27 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/back_login_selection_main"
-                    android:layout_marginEnd="@dimen/_5sdp"
                     android:padding="@dimen/_10sdp"
                     android:text="@string/txt_yes"
                     android:textAlignment="center"
-                    app:fontFamily="@font/roboto_medium"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_14ssp"
-                    android:textColor="@color/white"/>
+                    app:fontFamily="@font/roboto_medium" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvLogoutNo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
                     android:layout_weight="1"
                     android:background="@drawable/back_login_selection_main"
                     android:backgroundTint="@color/colorRed"
-                    android:layout_marginStart="@dimen/_5sdp"
                     android:padding="@dimen/_10sdp"
                     android:text="@string/txt_no"
                     android:textAlignment="center"
-                    app:fontFamily="@font/roboto_medium"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_14ssp"
-                    android:textColor="@color/white"/>
+                    app:fontFamily="@font/roboto_medium" />
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
