--- a/app/src/main/res/layout/item_home_manager_list.xml
+++ b/app/src/main/res/layout/item_home_manager_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/constraintMain"
@@ -53,6 +54,14 @@
                     android:textSize="@dimen/_14ssp"
                     app:fontFamily="@font/roboto_regular" />
 
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/tvManagerLiveTag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/live_stream_text"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
                 <!--<androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
